# regnskapnoter-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: llm-analyst-loop.md
examples/: Dockerfile  deploy.sh  llm_analyst.py
examples/calibration/: CALIBRATION.md  calibrate.py
src/regnskapnoter/: __init__.py  adapters.py  analyst.py  annotations.py  cli.py  context.py  frameworks.py  hypothesis.py  law_loader.py  loader.py  store.py  tables.py  taxonomy_context.py  urn.py
tests/: test_adapters.py  test_analyst.py  test_annotations.py  test_calibration.py  test_canonicalize.py  test_context.py  test_frameworks.py  test_hypothesis.py  test_law_loader.py  test_llm_analyst.py  test_loader.py  test_store.py  test_taxonomy_context.py  test_urn.py
