[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regnskapnoter"
version = "0.7.0"
description = "Python client for the Norwegian regnskapsnoter taxonomy. Concept-keyed access with framework grouping primitives."
readme = "README.md"
authors = [{name = "Sondre Skarsten"}]
license = "CC-BY-4.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "platformdirs>=4.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["ruff>=0.4.0", "mypy>=1.5.0"]
gcs = ["google-cloud-storage>=2.10.0"]
llm = ["google-genai>=0.3.0", "google-cloud-storage>=2.10.0"]

[project.scripts]
rn = "regnskapnoter.cli:main"

[project.urls]
Homepage = "https://github.com/sondreskarsten/regnskapnoter-py"
Repository = "https://github.com/sondreskarsten/regnskapnoter-py"
Taxonomy = "https://github.com/sondreskarsten/regnskapnoter-taxonomy"

[tool.hatch.build.targets.wheel]
packages = ["src/regnskapnoter"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "SIM", "UP", "RUF"]
ignore = ["E501"]
